# SFML-GameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  main.cpp
include/: Engine.hpp
